feat: routes, styles edit

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 
 h3 {
   text-align: center;
+  font-style: italic;
 }
 
 .form-control {
@@ -21,4 +22,8 @@ h3 {
 
 .nav-item {
   margin: 0 2rem;
+}
+
+section {
+  margin-bottom: 2rem;
 }/*# sourceMappingURL=style.css.map */
