--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,40 +1,58 @@
-<footer>
-  <div class="row row-cols-3">
-    <div>
-      <h4>Kontakt</h4>
-      <ul class="list-unstyled">
-        <li>+420 123 456 789</li>
-        <li>email@email.cz</li>
-        <div>
-          <li>Facebook Icon</li>
-          <li>Icon</li>
-        </div>
-      </ul>
-    </div>
+<div class="container text-center">
+  <footer>
+    <div class="row justify-content-center">
+      <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+        <h4>Kontakt</h4>
+        <ul class="list-unstyled">
+          <li>499 435 278</li>
+          <li>info@myslivna.cz</li>
+          <div>
+            <li>Facebook Icon</li>
+            <li>Icon</li>
+          </div>
+        </ul>
+      </div>
 
-    <div>
-      <h4 class="text-center">Adresa</h4>
-      <ul class="list-unstyled">
-        <li>Myslivna 160</li>
-        <li>Černý Důl</li>
-        <li>PSČ</li>
-      </ul>
-    </div>
+      <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+        <h4>Adresa</h4>
+        <ul class="list-unstyled">
+          <li>Myslivna</li>
+          <li>Černý Důl 160</li>
+          <li>543 44</li>
+        </ul>
+      </div>
 
-    <div>
-      <h4>Rezervace</h4>
-      <ul class="list-unstyled">
-        <li>
-          <a href="#">Úvod</a>
-        </li>
-        <li>
-          <a href="#">Galerie</a>
-        </li>
-        <li>
-          <a href="#">Ceník</a>
-        </li>
-      </ul>
+      <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+        <ul class="list-unstyled">
+          <li>
+            <a class="btn btn-dark mb-1" href="/rezervace">Rezervace</a>
+          </li>
+          <li>
+            <a
+              class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+              href="/">Úvod</a
+            >
+          </li>
+          <li>
+            <a
+              class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+              href="/galerie">Galerie</a
+            >
+          </li>
+          <li>
+            <a
+              class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+              href="/cenik">Ceník</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class="text-center">Vyrobila <a href="https://github.com/evadob">evadob</a>, 2023</div>
-</footer>
+    <div class="text-center">
+      Vyrobila <a
+        class="link-dark link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+        href="https://github.com/evadob">evadob</a
+      >, 2023
+    </div>
+  </footer>
+</div>
