--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top bg-white">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       Myslivna
       <img
         src="/icons/jelen.png"
@@ -26,22 +26,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Ubytování</a>
+          <a class="nav-link" href="/ubytovani">Ubytování</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Galerie</a>
+          <a class="nav-link" href="/galerie">Galerie</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Ceník</a>
+          <a class="nav-link" href="/cenik">Ceník</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Kontakt</a>
+          <a class="nav-link" href="/kontakt">Kontakt</a>
         </li>
       </ul>
-      <button class="btn btn-outline-success" type="submit">Rezervace</button>
+      <a class="btn btn-outline-success" href="/rezervace">Rezervace</a>
     </div>
   </div>
 </nav>
