--- a/src/pages/galerie.astro
+++ b/src/pages/galerie.astro
@@ -3,10 +3,11 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Galerie">
-  <div class="row row-cols-2">
-    <img class="col p-1" src="/galleryImgs/nature.jpeg" alt="" />
-    <img class="col p-1" src="/galleryImgs/sheep.jpeg" alt="" />
-    <img class="col p-1" src="/galleryImgs/pool.jpg" alt="" />
-    <img class="col p-1" src="/galleryImgs/playground.jpg" alt="" />
+  <h3 class="my-4">Galerie</h3>
+  <div class="row row-cols-2 mb-4">
+    <img class="col p-2" src="/galleryImgs/nature.jpeg" alt="" />
+    <img class="col p-2" src="/galleryImgs/sheep.jpeg" alt="" />
+    <img class="col p-2" src="/galleryImgs/pool.jpg" alt="" />
+    <img class="col p-2" src="/galleryImgs/playground.jpg" alt="" />
   </div>
 </Layout>
