--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Layout from "../layouts/Layout.astro";
     />
   </section>
 
-  <section>
+  <section class="text-center">
     <h3>O nás</h3>
     <p>Myslivna se nachází na úpatí Černé hory nedaleko obce Černý Důl.</p>
     <p>
@@ -27,12 +27,12 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </section>
 
-  <section class="bg-success bg-opacity-10">
-    <h3>Rezervace</h3>
+  <section class="bg-success bg-opacity-10 py-3">
+    <h3 class="mb-2">Rezervace</h3>
     <div class="container d-flex justify-content-center text-center">
       <form>
         <div class="d-flex gap-5">
-          <div class="mb-3">
+          <div class="mb-4">
             <label for="check-in" class="form-label">Příjezd</label>
             <input
               type="date"
