--- a/src/pages/rezervace.astro
+++ b/src/pages/rezervace.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Ceník">
-  <h3>Ceník</h3>
+<Layout title="Rezervace">
+  <h3>Rezervace</h3>
 </Layout>
