feat: contact text

--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -4,4 +4,42 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Kontakt">
   <h3>Kontakt</h3>
+
+  <section>
+    <div>
+      <ul>
+        <li>telefon</li>
+        <li>telefon</li>
+        <li>e-mail</li>
+      </ul>
+    </div>
+
+    <div>
+      <ul>
+        <li>Adresa</li>
+        <li>Jméno Příjmení</li>
+        <li>Černý Důl 160</li>
+        <li>543 44</li>
+      </ul>
+    </div>
+  </section>
+
+  <section>
+    <p>Jak se k nám dostanete?</p>
+    <p>
+      Z náměstí Černého Dolu směrem na Jánské lázně, u továrny Mileta (v prudké
+      pravotočivé zatáčce) odbočíte doleva za vrátnici továrny, pojedete po
+      místní komunikaci cca 1500m a jste u nás.
+    </p>
+    <p>Těšíme se na vaši návštěvu!</p>
+  </section>
+
+  <section>
+    <div>MAPA</div>
+  </section>
+
+  <section>
+    <div>Fakturační údaje</div>
+    <div>Rezervace Button</div>
+  </section>
 </Layout>
