feat: btn letter spacing

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -41,7 +41,9 @@
           <a class="nav-link" href="/kontakt">Kontakt</a>
         </li>
       </ul>
-      <a class="btn btn-outline-success" href="/rezervace">Rezervace</a>
+      <a class="btn btn-outline-success reservation" href="/rezervace"
+        >Rezervace</a
+      >
     </div>
   </div>
 </nav>
