--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ h3 {
   font-style: italic;
 }
 
+.btn {
+  letter-spacing: 1px;
+}
+
 .form-control {
   border-radius: 0;
   padding: 0.5rem 1rem;
