--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg sticky-top bg-white">
-  <div class="container-fluid">
+  <div class="container px-0">
     <a class="navbar-brand" href="/">
       Myslivna
       <img
